ontol/ontol-compiler/test-cases/error/repr/number_resolution.on
def a (
    rel* is: float // NOTE base type is float
)
def b (
    rel* is: i64 // NOTE base type is integer
)
def c ( // ERROR ambiguous number resolution
    rel* is: a
    rel* is: b
)
